versioned_docs/version-2.0/reference/subsystems/lambdex.mdx
---
title: lambdex
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

A tool for turning .pex files into AWS Lambdas (https://github.com/wickman/lambdex).

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[lambdex]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--lambdex-version=<str>`}
  env_repr='PANTS_LAMBDEX_VERSION'
  toml_repr={`[lambdex]
version = <str>`}
  default_repr={`lambdex==0.1.3`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--lambdex-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr='PANTS_LAMBDEX_EXTRA_REQUIREMENTS'
  toml_repr={`[lambdex]
extra_requirements = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "setuptools>=50.3.0,<50.4"\n]`}
>

Any additional requirement strings to use with the tool. This is useful if the tool allows you to install plugins or if you need to constrain a dependency to a certain version.

</Option>

### `entry_point`

<Option
  cli_repr={`--lambdex-entry-point=<str>`}
  env_repr='PANTS_LAMBDEX_ENTRY_POINT'
  toml_repr={`[lambdex]
entry_point = <str>`}
  default_repr={`lambdex.bin.lambdex`}
>

The main module for the tool. Usually, you will not want to change this from the default.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--lambdex-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr='PANTS_LAMBDEX_INTERPRETER_CONSTRAINTS'
  toml_repr={`[lambdex]
interpreter_constraints = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "CPython>=3.5"\n]`}
>

Python interpreter constraints for this tool.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
